--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vitepress": "^1.3.4"
+    "vitepress": "^1.3.4",
+    "vitepress-plugin-tabs": "^0.5.0"
   }
 }
